# hack-the-law-2026

./: .env.example  .gitignore  API.md  DEMO.md  README.md  demo_queries.cypher  pyproject.toml  uk_sources
RegExplorerSite/: package-lock.json  package.json
RegExplorerSite/src/: routeTree.gen.ts  styles.css
RegExplorerSite/src/components/research/: AppHeader.tsx  DossierReferenceText.tsx  JurisdictionTag.tsx  (+4 more)
RegExplorerSite/src/lib/: api.ts  regimes.ts
RegExplorerSite/src/routes/: __root.tsx  index.tsx
config/: scope.yaml
dataset/: neo4j-export.py
dataset/dossiers/: custom-1782572705415.json  eu-celex-32000L0031.json  eu-celex-32010L0013.json  eu-celex-32016R0679.json  eu-celex-32021R0784.json  eu-celex-32022R1925.json  eu-celex-32022R2065.json  eu-celex-32024R1689.json  uk-ukpga-2003-21.json  uk-ukpga-2016-25.json  uk-ukpga-2017-30.json  uk-ukpga-2018-12.json  uk-ukpga-2023-50.json
docs/: HANDOVER-regime-surfacing.md  regulator-pdf-ingestion.md
docs/superpowers/plans/: 2026-06-27-regime-workspace.md
docs/superpowers/specs/: 2026-06-27-regime-workspace-design.md  2026-06-27-regimes-nav-edit-design.md
scripts/: build_sample.py  ingest_osa_regulator_docs.py
src/legalgraph/: __init__.py  api.py  canonical.py  cli.py  db.py  dossier.py  fetch.py  io.py  linker.py  llm.py  loader.py  regimes.py  retrieval.py  skeleton.py  validator.py
src/legalgraph/adapters/: __init__.py  base.py
tests/: conftest.py  test_api.py  test_dossier.py  test_eu_cellar.py  test_harness.py  test_llm.py  test_regimes.py  test_regulator_documents.py  test_scope.py
(+13 files in other folders)
