[project]
name = "legalgraph"
version = "0.1.0"
description = "Jurisdiction-agnostic legal knowledge graph (UK, EU, ...) over Neo4j"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "neo4j>=5.20",
    "pyyaml>=6.0",
]

[project.scripts]
legalgraph = "legalgraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legalgraph"]
